# agentarena

./: .gitignore  .pre-commit-config.yaml  README.md  colab.iypnb  config.yaml  example_train.sh  example_watch_agent.sh  hybrid_hybrid_agent_20250619_174725_best.pt  installation_verification.py  old_ml_agent.py  out  pyproject.toml  requirements.txt
models/: ml_agent_20250412_112317_advanced_final.pt
notebook/: agentarena_colab.ipynb
report/chapters/: introduction.tex
results/: training_results_20250412_112317_advanced.pkl
scripts/: collect_demos.py  evaluate.py  generate_data.py  hybrid.sh  hybrid_training.py  improved_evaluate.py  pretrain.py  train_model_vs_model.py  visualize_results.py
src/: main.py
src/agent/: agent.py  default_agent.py  manual_agent.py  ml_agent.py  random_agent.py
src/agentarena/: config.py  main.py
src/agentarena/agent/: agent.py  manual_agent.py  ml_agent copy.py  ml_agent.py  random_agent.py  rule_based_agent.py  rule_based_agent_2.py
src/agentarena/game/: __init__.py  action.py  asset_manager.py  event_manager.py  game.py  level.py  object_factory.py  old_game.py  physics.py  rendering.py
src/agentarena/game/entities/: entity.py  explosion.py  player.py  projectile.py  wall.py
src/agentarena/models/: action.py  config.py  entities.py  events.py  observations.py  training.py
src/agentarena/training/: demo_collection.py  pretraining.py  reward_functions.py  train.py  visualize_training.py
src/data/: episode_20250409_124151.json
src/game/: action.py  game.py  level.py  player.py
src/training/: train.py
